name:                bf
version:             0.1.0.0
synopsis:            Fast brainfuck interpreter
description:         Fast brainfuck interpreter.
homepage:            http://github.com/AndrasKovacs/fastbf
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          puttamalac@gmail.com
copyright:           2016 Andr치s Kov치cs here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fastbf
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2 -fllvm
  build-depends:       attoparsec
                     , base
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , lens
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AndrasKovacs/fastbf
