name:                fastbf
version:             0.1.0.0
synopsis:            Fast brainfuck interpreter
description:         Fast brainfuck interpreter.
homepage:            http://github.com/AndrasKovacs/fastbf
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          puttamalac@gmail.com
copyright:           2016 Andr치s Kov치cs here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fastbf-exe
  main-is:             Main.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base
                     , bytestring >= 0.10.6.0
                     , deepseq >= 1.4.1.1
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , criterion
                     , vector
                     , primitive
                     , attoparsec
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AndrasKovacs/fastbf
